--- a/app/public/project-explorer/index.html
+++ b/app/public/project-explorer/index.html
@@ -12,11 +12,11 @@
         <h2>One Stop Database for Academic Projects</h2>
     </header>
     <nav>
-        <span><a href="./index.html">Home</a></span>
-        <span><a href="./search.html">Projects</a></span>
-        <span><a href="./login.html">Login</a></span>
-        <span><a href="./register.html">Register</a></span>
-        <span><a href="./createproject.html">Submit</a></span>
+        <a href="./index.html">Home</a>
+        <a href="./search.html">Projects</a>
+        <a href="./login.html">Login</a>
+        <a href="./register.html">Register</a>
+        <a href="./createproject.html">Submit</a>
     </nav>
     <main>
         <p>This application allows you to explore various academic projects. You can search, upload and browse projects</p>
