--- a/app/public/project-explorer/viewproject.html
+++ b/app/public/project-explorer/viewproject.html
@@ -11,11 +11,12 @@
         <h1>Project Explorer</h1>
         <h2>One Stop Database for Academic Projects</h2>
     </header>
+
     <nav>
-        <span><a href="./index.html">Home</a></span>
-        <span><a href="./search.html">Projects</a></span>
-        <span><a href="./login.html">Login</a></span>
-        <span><a href="./register.html">Register</a></span>
+        <a href="./index.html">Home</a>
+        <a href="./search.html">Projects</a>
+        <a href="./login.html">Login</a>
+        <a href="./register.html">Register</a>
     </nav>
     <main>
         <section>
