--- a/app/public/project-explorer/viewproject.html
+++ b/app/public/project-explorer/viewproject.html
@@ -13,10 +13,10 @@
     </header>
 
     <nav>
-        <a href="./index.html">Home</a>
-        <a href="./search.html">Projects</a>
-        <a href="./login.html">Login</a>
-        <a href="./register.html">Register</a>
+        <a href="index.html">Home</a>
+        <a href="search.html">Projects</a>
+        <a href="login.html">Login</a>
+        <a href="register.html">Register</a>
     </nav>
     <main>
         <section>
