--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -43,7 +43,7 @@
                 </select>
             </label><br><br>
             <label for="year">Graduation Year:
-                <select name="year" id="year">
+                <select name="graduationYear" id="year">
                     <option value="2013">2013</option>
                     <option value="2014">2014</option>
                     <option value="2015">2015</option>
