--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -31,7 +31,7 @@
                     <option value="Tags">Tags</option>
                 </select>
                 <br><br>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Search">
             </form>
         </section>
         <section>
