--- a/app/public/project-explorer/viewproject.html
+++ b/app/public/project-explorer/viewproject.html
@@ -21,7 +21,7 @@
     <main>
         <section>
             <h3>Project 1</h3>
-            <p><a href="./editproject.html">Edit Project</a></p>
+            <a href="editproject.html">Edit Project</a>
             <ul>
                 <li>Created by: Jane Doe</li>
                 <li>Date Created: 00/00/0000</li>
